--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-29  Jason Merrill  <jason@yorick.cygnus.com>
+
+	* decl2.c (lang_decode_option): Remove -Wsign-promo from -Wall.
+
 1999-03-28  Jason Merrill  <jason@yorick.cygnus.com>
 
 	* pt.c (fn_type_unification): Ignore 'this' parm from conversion ops.
