fix typo in extend.texi
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26063 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/extend.texi
+++ b/gcc/extend.texi
@@ -2543,7 +2543,7 @@ the @code{asm}.  For example:
 (@{ int __old; \
    asm volatile ("get_and_set_priority %0, %1": "=g" (__old) : "g" (new)); \
    __old; @})
-b@end example
+@end example
 
 @noindent
 If you write an @code{asm} instruction with no outputs, GNU CC will know
