--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-30  Mark Mitchell  <mark@codesourcery.com>
+
+	* splay-tree.c (splay_tree_compare_ints): Define.
+
 1999-03-30  Tom Tromey  <tromey@cygnus.com>
 
 	* cplus-dem.c (consume_count): If `count' wraps, return 0 and
