--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -73,7 +73,7 @@ Mon Mar 29 11:50:34 1999  Jerry Quinn <jquinn@nortelnetworks.com>
 
 Mon Mar 29 08:24:43 1999  Bruce Korb <korb@datadesign.com>
 
-	* fixinc/mkfixinc.sh:  Heredoc portability problem
+	* fixinc/mkfixinc.sh:  Fix portability problems with old shells.
 
 	* fixinc/README:  Updated for release announcement
 
