* system.h (STDERR_FILENO): Fix typo.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26074 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 Wed Mar 31 00:50:48 1999  Jeffrey A Law  (law@cygnus.com)
 
+	* system.h (STDERR_FILENO): Fix typo.
+
 	* inclhack.def (bool): Also fix bogus bool in curses_colr/curses.h
 	* fixincl.x, inclhack.sh, fixincl.sh: Rebuilt.
 
