--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Wed Mar 31 01:49:31 1999  Ian Lance Taylor  <ian@zembu.com>
+
+	* t-rtems (LIMITS_H_TEST, LIBGCC2_INCLUDES): Define.
+
 Wed Mar 31 00:50:48 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* system.h (STDERR_FILENO): Fix typo.
