* Makefile.in (keyword.h): Generate using gperf language 'C', not         'KR-C', so gperf uses the `const' keyword on strings.         * keyword.gperf (java_keyword): Const-ify a char*.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26082 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,10 @@
+Wed Mar 31 11:00:32 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+        * Makefile.in (keyword.h): Generate using gperf language 'C', not
+        'KR-C', so gperf uses the `const' keyword on strings.
+
+        * keyword.gperf (java_keyword): Const-ify a char*.
+
 Tue Mar 30 11:31:53 1999  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* parse.y (patch_bc_statement): Fixed identation and a bogus
