--- a/libf2c/ChangeLog
+++ b/libf2c/ChangeLog
@@ -1,3 +1,10 @@
+Wed Mar 31 13:50:24 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* configure.in (extra_includes): Don't attempt to calculate the
+ 	location of the gcc src or obj directories.  Instead rely on
+ 	precomputed variables, $topsrcdir and $r, to obtain these values.
+	Set -I flags appropriately.
+	
 1999-03-28  Dave Love  <fx@gnu.org>
 
 	* configure: Rebuilt.
