--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Apr  1 01:09:27 1999  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* fixinc/inclhack.def: Fix typos in c_asm.h fix.
+	* fixinc/fixincl.x, fixinc/inclhack.sh, fixinc/fixinc.sh: Rebuilt.
+
 Wed Mar 31 17:20:11 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* toplev.c (rest_of_compilation): Allow dbr_schedule to write to
