* fixinc/hackshell.tpl: Complete transition to fixinc.tmp.         * fixinc/inclhack.sh: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26094 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 Thu Apr  1 01:09:27 1999  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* fixinc/hackshell.tpl: Complete transition to fixinc.tmp.
+	* fixinc/inclhack.sh: Rebuilt.
+
 	* fixinc/inclhack.def: Fix typos in c_asm.h fix.
 	* fixinc/fixincl.x, fixinc/inclhack.sh, fixinc/fixinc.sh: Rebuilt.
 
