* fixinc/inclhack.def (zzz_ki_syscalls, zzz_time): Fix trigger         string to only match on hpux11.         * fixinc/fixincl.x, fixinc/inclhack.sh, fixinc/fixinc.sh: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26096 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Thu Apr  1 02:17:18 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* fixinc/inclhack.def (zzz_ki_syscalls, zzz_time): Fix trigger
+	string to only match on hpux11.
+	* fixinc/fixincl.x, fixinc/inclhack.sh, fixinc/fixinc.sh: Rebuilt.
+
 Thu Apr  1 01:09:27 1999  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* fixinc/hackshell.tpl: Complete transition to fixinc.tmp.
