* i386.c (notice_update_cc): No need to check the INT mode for         conditional moves since FLOAT conditional moves don't affect cc0.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26097 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Apr  1 03:48:34 1999  H.J. Lu  (hjl@gnu.org)
+
+	* i386.c (notice_update_cc): No need to check the INT mode for
+	conditional moves since FLOAT conditional moves don't affect cc0.
+
 Thu Apr  1 02:17:18 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* fixinc/inclhack.def (zzz_ki_syscalls, zzz_time): Fix trigger
