* i386.c (output_int_conditional_move): Use "enum rtx_code" for code         type.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26098 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 Thu Apr  1 03:48:34 1999  H.J. Lu  (hjl@gnu.org)
 
+	* i386.c (output_int_conditional_move): Use "enum rtx_code" for code
+	type.
+
 	* i386.c (notice_update_cc): No need to check the INT mode for
 	conditional moves since FLOAT conditional moves don't affect cc0.
 
