--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+Wed Mar 31 11:30:43 BST 1999  Nathan Sidwell  <nathan@acm.org>
+
+	* cvt.c (convert_pointer_to_real): Use same_type_p.
+	* typeck.c (comp_target_types): Use same_type_p.
+
 1999-03-31  Jason Merrill  <jason@yorick.cygnus.com>
 
 	* semantics.c (begin_inline_definitions,
