The -malign-double option now works
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26114 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,9 @@
+Fri Apr  2 13:33:16 1999  Craig Burley  <craig@jcb-sc.com>
+
+	* g77.texi: -malign-double now works.
+	Give URL for alignment-testing package.
+	* news.texi: -malign-double now works.
+
 Fri Apr  2 12:49:12 1999  Craig Burley  <craig@jcb-sc.com>
 
 	* g77.texi (Funding GNU Fortran): Dude's got a web page.
