* i386.c (print_operand_address, case REG): Do not use ESI addressing         mode for the K6.         * i386.c (print_operand_address, case MULT): Use more efficient         encoding (mult (reg) (const_int 2)).
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26116 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+Fri Apr  2 11:36:12 1999  Jan Hubicka  (hubicka@paru.cas.cz)
+
+	* i386.c (print_operand_address, case REG): Do not use ESI addressing
+	mode for the K6.
+
+	* i386.c (print_operand_address, case MULT): Use more efficient
+	encoding (mult (reg) (const_int 2)).
+
 Thu Apr  1 17:01:50 1999  Richard Henderson  <rth@cygnus.com>
 
 	Move over patch from Bernd Schmidt from GC branch:
