Complete the change to the 'fixinc.tmp' file
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26120 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -3,6 +3,9 @@
 	* fixinc/mkfixinc.sh:  added support for x86-interix
 	* fixinc/fixinc.interix:  fixincludes script, slight chages
 	from ./fixinc.interix.  Untested (needs interix box).
+	* fixinc/inclhack.def:
+	Complete the change to the 'fixinc.tmp' file
+	* fixincl.x, fixincl.sh, inclhack.sh: regenerate
 
 Fri Apr  2 11:36:12 1999  Jan Hubicka  (hubicka@paru.cas.cz)
 
